RESOLVED FIXED18289
extra bullet showing up due to display:block
https://bugs.webkit.org/show_bug.cgi?id=18289
Summary extra bullet showing up due to display:block
jasneet
Reported 2008-04-02 14:49:41 PDT
I Steps: Go to https://support.live.com/eform.aspx?productKey=wllocal&ct=eformts II Issue: The right column with list of FAQs has one extra bullet showing up besides link "View more questions" III Conclusion: .faqviewmore { background-color:#EFEFEF;position:relative;display:block;padding-left:18px;left:-18px;} display:block; is causing the issue; issue is resolved on removing it. IV Other browsers: IE7: ok FF3: ok Opera9.24: ok V Nightly tested: 31446
Attachments
screenshot (140.72 KB, image/jpeg)
2008-04-02 14:50 PDT, jasneet
no flags
reduction (498 bytes, text/html)
2008-04-02 14:50 PDT, jasneet
no flags
Slightly smaller reduction (386 bytes, text/html)
2009-05-02 07:30 PDT, Gavin Sherlock
no flags
jasneet
Comment 1 2008-04-02 14:50:05 PDT
Created attachment 20299 [details] screenshot
jasneet
Comment 2 2008-04-02 14:50:32 PDT
Created attachment 20300 [details] reduction
Gavin Sherlock
Comment 3 2009-05-02 07:30:38 PDT
Created attachment 29958 [details] Slightly smaller reduction Compare Safari to Firefox and Opera. Tested on Mac with r43110
Ahmad Saleem
Comment 4 2022-07-24 04:42:55 PDT
I am able to reproduce this bug in Safari 15.6 on macOS 12.5 based on attached "slightly smaller..." test case. All other browsers (Chrome Canary 106 and Firefox Nightly 104) does not show "bullet" against (No Bullet) line while Safari 15.6 does. Just wanted to share updated testing results. Thanks!
Radar WebKit Bug Importer
Comment 5 2022-07-24 22:17:35 PDT
Ryan Reno
Comment 6 2022-08-01 13:37:00 PDT
The problem appears to be due to the RenderListMarker being a child of the <a> element's renderer as opposed to a sibling. Additionally, the <a> element is given a RenderBlock renderer in the buggy case vs a RenderInline renderer (which may itself not be a problem). I don't yet understand the mechanism for why the tree is being built the way it is but I suspect that might be where the fix can be found. Here's a simplified render tree of the repro case containing only one list element with (1) and without (2) display:block; (1): - DIV RenderBlock - UL RenderBlock - LI RenderListItem - A RenderBlock - RenderListMarker (2): - DIV RenderBlock - UL RenderBlock - LI RenderListItem - RenderListMarker - A RenderInline
Ryan Reno
Comment 7 2022-08-01 17:52:18 PDT
(In reply to Ryan Reno from comment #6) > Additionally, the <a> > element is given a RenderBlock renderer in the buggy case vs a RenderInline > renderer (which may itself not be a problem). This is simply because the default display property of anchor elements is display: inline. We're explicitly setting display: block in the buggy case so it should have a RenderBlock renderer instead of a RenderInline renderer.
Alexsander Borges Damaceno
Comment 8 2025-02-11 09:54:51 PST
m.jason.liu
Comment 9 2026-03-11 09:18:29 PDT
EWS
Comment 10 2026-03-13 00:49:44 PDT
Committed 309188@main (d184010b1c55): <https://commits.webkit.org/309188@main> Reviewed commits have been landed. Closing PR #60368 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.