Fix bullet showing up due left property being ignored https://bugs.webkit.org/show_bug.cgi?id=18289

Reviewed by NOBODY (OOPS!).

Bullet was displayed despite the left property being set with position: relative.

This happened because the list marker did not take the left property into account
when position: relative was applied.

* Source/WebCore/rendering/RenderListMarker.cpp:
(WebCore::RenderListMarker::relativeMarkerRect):